--- a/frontend/imports/client/network-status.html
+++ b/frontend/imports/client/network-status.html
@@ -19,6 +19,6 @@
     </ul>
   </div>
   <div id="accountDiv">
-    <span>AuctionManager contract: <a href="{{etherscanHref}}{{contract}}" target="_blank" class="address">{{contract}}</a></span>
+    <span>AuctionManager contract: {{> address address=contract}}</span>
   </div>
 </template>
