Slight UI changes

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -5,7 +5,7 @@
 <body>
   <div id="outer" class="container">
     <div id="inner">
-      <h1>token-auction-gui</h1>
+      <h1>token-auction-gui <small>0.0.1</small></h1>
       {{> networkStatus}}
       {{#if isConnected}}
         {{#if contractExists}}
