Removed TBDs from presenting initial price and initial sell amount for reverse auctions
We can show these amounts now as after change
36d017001e0e79caaaf1575e5286665b04eaa8d7 in token-auction the
`sell-amount` on reverse auctions does not decrease with subsequent
bids.

--- a/frontend/imports/client/auction.html
+++ b/frontend/imports/client/auction.html
@@ -27,11 +27,11 @@
         {{#if auction.isReverse}}
           <tr>
             <td>Buying</td>
-            <td><span class="amount">{{formatBalance (fromWei auction.start_bid)}} {{> token address=auction.buying}}</span> <span class="separator">for at most</span> <span class="todo"><span class="amount">{{formatBalance (fromWei auction.sell_amount)}} {{> token address=auction.selling}}</span> (<i>this info is fake!!!</i>)</span></td>
+            <td><span class="amount">{{formatBalance (fromWei auction.start_bid)}} {{> token address=auction.buying}}</span> <span class="separator">for at most</span> <span class="amount">{{formatBalance (fromWei auction.sell_amount)}} {{> token address=auction.selling}}</span></td>
           </tr>
         <tr>
           <td>Initial price</td>
-          <td><span class="todo"><span class="amount">TBD</span></span></td>
+          <td><span class="amount">{{formatBalance (auction.unit_price_reverse)}} {{> token address=auction.selling}}/{{> token address=auction.buying}}</span></td>
         </tr>
         {{/if}}
         <!--<tr>-->
